# libspec

./: .gitignore  2026-05-02-design-suggestion.org  404.html  LICENSE  Makefile  README.md  err.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  repro2.py  repro3.py  repro_spec.py  run_spec.py  sitemap.xml  spec.py  speclib.py  specweb.py  test_docstring_inheritance.py  user_story.py  uv_pros_cons_analysis.md
.codex/: config.toml  config.toml.bak
.codex/skills/libspec/: SKILL.md
.copilot/: mcp.json
.gemini/: mcp_config.json
.gemini/skills/libspec/: SKILL.md
.github/skills/libspec/: SKILL.md
.github/workflows/: ci.yml  docs.yml
.libspec/: AGENTS.md  instructions.md  libspec.jsonl  test_libspec.jsonl  workflow.yaml
.libspec/plugins/: hello_ast.py  hello_plugin.py
.libspec/skills/: antigravity.md  codex.md  workflow.md
.opencode/: opencode.json.bak
.opencode/skills/libspec/: SKILL.md  SKILL.md.bak
agent_queue_brainstorm/: index.html
dependencies_design_proposal/: index.html
design/: 2026-05-19.claude  2026-05-19.gemini  err.md  spec_store_resolution.md  treesitter_redesign.md  vcs_event_linking_design.md
docs/: 2026-05-02-design-suggestion.org  agent_queue_brainstorm.md  cross-major-version-diffs.org  dependencies_design_proposal.md  fixing-libspec-diff-resolution.md  index.md
docs/explanation/: architecture.md  osm.md
docs/how-to/: agents.md  dependencies.md  repl.md
docs/reference/: api.md  cli.md  mcp.md
docs/tutorials/: quickstart.md
examples/: README.md  test_source_map.py
examples/bank-account/: spec.py
examples/bank-account/go/: bank-account  go.mod  main.go  spec.out  spec.py  test_test.go
examples/bank-account/python/: main.py  pyproject.toml  spec.py
examples/bank-account/rust/: spec.out  spec.py
examples/cmdline1/go/: main.go  spec.py  specout
examples/cmdline1/python/: main.py  pyproject.toml  spec.py
examples/temperature-conversion/: main.py  spec.py
examples/tictactoe/: main.py  spec1.txt
examples/tictactoe-urwid/: main.py
examples/tictactoe-urwid/claude/: pyproject.toml  tictactoe1.py  tictactoe2.py  tictactoe3.py  tictactoe4.py  tictactoe5.py  tictactoe6.py  tictactoe7.py
examples/tictactoe-urwid/gemini/: tictactoe.py  tictactoe8.py
examples/tictactoe-urwid/groq/: main.py  pyproject.toml  try3.py
examples/tictactoe/claude/: game1.py
exp/: game2.py  spec2.txt
exp/gemini/: tictactoe1.py  tictactoe2.py
explanation/architecture/: index.html
explanation/osm/: index.html
fixing-libspec-diff-resolution/: index.html
how-to/agents/: index.html
how-to/dependencies/: index.html
how-to/repl/: index.html
libspec/: __init__.py  agent_config.py  cli.py  colors.py  common.py  err.py  hello_plugin.py  lsp_client.py  mcp_server.py  migration.py  pylsp_plugin.py  query_map.py  repl.py  spec.py  spec_diff.py  spec_types.py  specweb.py  store.py  user_story.py  util.py  watcher.py  workflow.py
libspec-scheduler/: pyproject.toml
libspec-scheduler/src/libspec_scheduler/: __init__.py  mcp.py  scheduler.py
libspec-scheduler/tests/: test_mcp_scheduler.py  test_scheduler.py
libspec/stores/: __init__.py  json_lines.py  sqlite.py  xml_adapter.py
libspec/templates/: err.py  skill.md.j2
reference/api/: index.html
reference/cli/: index.html
reference/mcp/: index.html
scratch/: debug_settings.js  explore_spec.py  get_spec_classes.py  test_backups.py  test_configs.py  test_jedi_plugin.py  test_mcp_connection.py  test_search.py  test_search_mcp.py  test_store.py
search/: search_index.json
spec/: app.py  cli.py  colors.py  commands.py  common.py  core.py  diff.py  err.py  git_hooks.py  hello_ast.py  hello_plugin.py  json_lines_migration.py  json_lines_store.py  lsp_auto_init.py  main_spec.py  mcp.py  migration.py  repl.py  scheduler.py  store.py  store_compaction.py  types.py  utils.py
spec-build/: spec-13994140dbd106cca516.xml  spec-150e9481dcd54e1da0f0.xml  spec-169e47f706ff33de4630.xml  spec-18a3cd3fc4bc91585ca9.xml  spec-22d6e6ba1efd33f85711.xml  spec-38c50bb3026551836212.xml  spec-3e9f856faa653ae95278.xml  spec-470ae611041edb834d85.xml  spec-47d244114396699bf6a1.xml  spec-4be2fb7ee304eed2bbd9.xml  spec-4df94189f9e644f561b5.xml  spec-51f1727801d0b09a4829.xml  spec-544796928d6a59bf4b8e.xml  spec-61c02b66c23fa3d07898.xml  spec-650a0080ebeb8ffe3e02.xml  spec-6f6704c3f4e350766cd9.xml  spec-772c319bccaf4b5f32ba.xml  spec-7757861f8e43c5cba5e2.xml  spec-778ba35180d693216e3d.xml  spec-7948b13e1f207bf17a8c.xml  spec-807783d62e1cfb220b89.xml  spec-82dabb9c8ed2a4f402a5.xml  spec-86490e6f4c39cc9e07c4.xml  spec-924ad1da117f425c9adc.xml  spec-95898b2966b85499cd2d.xml  spec-959f42fd28f956885820.xml  spec-ab7eb342762e4fbb7dde.xml  spec-ba5680ef2fa929e1cbd0.xml  spec-bb45f1b126f93e2e0cba.xml  spec-bc3743ada385a608a028.xml  spec-bc45eb008e767091fa96.xml  spec-c14d94f2076944bd195c.xml  spec-c7fcf9060db598105f36.xml  spec-c82acbda30b95b5775b3.xml  spec-cc8dc96e3916358221d8.xml  spec-d21684a280482c89fe6f.xml  spec-d22dfac544fee0e3c17d.xml  spec-d2d4f3bc6c9fdbc45744.xml  spec-d77df94151b411ea566b.xml  spec-ddfb45829afb1d633a3d.xml  (+6 more)
spec/.gemini/antigravity/: mcp_config.json
test2/: test_import.py  test_import2.py
test2/spec/: app.py  err.py  main_spec.py
test2/spec-build/: spec-b773e2d9bd4610c51958.xml
tests/: conftest.py  test_agent_config.py  test_agent_workflow.py  test_cli.py  test_common_types.py  test_cwd_validation.py  test_idempotency.py  test_jsonlines_store.py  test_lifecycle_mutators.py  test_lsp.py  test_mcp_metadata.py  test_migration.py  test_missing_requirement_variable.py  test_mixins.py  test_projects.py  test_removed_cli.py  test_repl.py  test_soft_delete.py  test_spec.py  test_spec_diff.py  test_templated_superspec_rendering.py  test_watcher.py  test_xml_render.py
tests/projects/cli_tool_project/: commands.py  requirements.py  spec.py
tests/projects/database_project/: schemas.py  spec.py
tests/projects/rest_api_project/: api.py  models.py  spec.py
tutorials/quickstart/: index.html
util/: bump_version.py  format_docstrings.py  release.sh
(+10 files in other folders)
