[project]
name = "libspec"
version = "10.1.0"
description = "Spec-driven development library for LLM-assisted coding"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [{ name = "Derek A. Rhodes", email = "physci@gmail.com" }]
keywords = ["specification", "llm", "codegen", "spec-driven", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.6",
    "mcp>=1.27.0",
    "python-lsp-server>=1.12.2",
    "toml>=0.10.2",
    "skillkit>=0.4.0",
    "prompt-toolkit>=3.0.52",
    "colored>=2.3.2",
    "aiofiles>=25.1.0",
]

[project.urls]
Homepage = "https://github.com/drhodes/libspec"
Repository = "https://github.com/drhodes/libspec"
"Bug Tracker" = "https://github.com/drhodes/libspec/issues"

[project.scripts]
libspec = "libspec.cli:main"
libspec-mcp = "libspec.mcp_server:main"

[project.entry-points.pylsp]
libspec = "libspec.pylsp_plugin"

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    ".",
    "libspec-scheduler",
]

[tool.setuptools.packages.find]
include = ["libspec*"]
exclude = ["spec*", "tests*"]

[tool.setuptools.package-data]
libspec = ["templates/*.j2", "templates/*.py"]

[dependency-groups]
dev = [
    "pudb>=2025.1.5",
    "pytest>=9.0.2",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.12",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mypy>=2.1.0",
    "radon>=6.0.1",
    "coverage>=7.14.1",
    "mutmut>=3.6.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501", "B904", "C401", "C414", "N806", "B007", "N805", "F401", "W291", "W293", "UP042", "A001", "B006"]

[tool.mypy]
python_version = "3.12"
warn_unreachable = true
exclude = ["build/", "dist/", "spec/"]
check_untyped_defs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disable_error_code = ["var-annotated", "union-attr", "attr-defined", "assignment", "return-value", "operator", "empty-body", "unreachable", "truthy-function", "misc", "import-untyped", "has-type", "arg-type"]

[[tool.mypy.overrides]]
module = ["toml", "colored", "skillkit"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["libspec"]
omit = ["tests/*", "spec/*"]

[tool.coverage.report]
fail_under = 69
show_missing = true

[tool.mutmut]
paths_to_mutate = "libspec/"
backup = false
runner = "python -m pytest"

[tool.pytest.ini_options]
norecursedirs = ["scratch", ".*", "build", "dist"]

