[project]
name = "libspec-scheduler"
version = "0.1.0"
description = "Parallel worker scheduling and orchestration module for libspec"
requires-python = ">=3.12"
dependencies = [
    "libspec",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
libspec = { workspace = true }

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
